# document_processing_pipeline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/schemas/: document_types.py  extraction.py
app/services/: gemini.py
app/utils/: pdf.py
app/workflow/: graph.py  state.py
app/workflow/nodes/: aggregator.py  bill_agent.py  discharge_agent.py  id_agent.py  segregator.py
